make text command work
gif support sorta
add function for testing sync vs async behavior